update endpoints bugs
